[package]
name = "tokio-serde-json-mirror"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "Mirror of https://github.com/carllerche/tokio-serde-json which is for some reason not updated on crates.io"
license = "MIT / Apache-2.0"

[dependencies]
futures = "0.1"
bytes = "0.4"
tokio-serde = "0.2"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio-core = "0.1"
tokio-io = "0.1"
